--- a/templates/profiles/edit.html
+++ b/templates/profiles/edit.html
@@ -8,22 +8,63 @@
 
 {%- block styles-%}
 <link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/dropzone.min.css" rel='stylesheet' type="text/css">
+<link href= "https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.0/spectrum.min.css" rel='stylesheet' type="text/css">
 {{ super() }}
 <link href={{ url_for('static', filename='css/fontselect.css') }} rel='stylesheet' type="text/css">
-<link href= "https://cdnjs.cloudflare.com/ajax/libs/spectrum/1.7.0/spectrum.min.css" rel='stylesheet' type="text/css">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/dropzone/4.0.1/min/basic.min.css" rel='stylesheet' type="text/css">
 {%- endblock -%}
 
+{% block page_header %}
+<div class="collapse" id="collapseExample">
+  <div class="container container-fluid">
+    <div class="jumbotron tool-panel">
+      <div class="row">
+        <div class="col-lg-4">
+            <h3>colors</h3>
+            <input type='text' class="basic" id="{{BKG_COLOR}}"/>
+            <input type='text' class="basic" id="{{COLOR_MAIN}}"/>
+            <input type='text' class="basic" id="{{COLOR_INNER}}"/>
+            <input type='text' class="basic" id="{{COLOR_HEADERS}}"/>
+            <input type='text' class="basic" id="{{COLOR_TEXT}}"/>
+        </div>
+        <div class="col-lg-4">
+          <h3>background</h3>
+          <div class="col-lg-12 bkg-drop dropzone" id="bkg-drop">
+            <ul class="list-group">
+              <li class="list-group-item">
+              <div class="btn-group-vertical btn-group-xs centered" role="group" aria-label="...">
+                <span class="glyphicon glyphicon-picture" aria=hidden="true"></span>
+              </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-lg-4">
+          <h3>fonts</h3>
+          <input id="{{FONT_HEADERS}}" type="text" />
+          <input id="{{FONT_TEXT}}" type="text" />
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+{% endblock %}
+
 {% block sidebar %}
 <div class="col-xs-1 fill" id="sidebar_container" style="margin-right:10px;">
-    {{ content.render_sidebar(profile.sidebar, true) }}
-    <div class="col-xs-12">
+  {{ content.render_sidebar(profile.sidebar, true) }}
+  <ul class="list-group">
+      <li class="list-group-item">
+      <div class="col-xs-12">
         <div class="btn-group-vertical btn-group-xs centered" role="group" aria-label="...">
           <button id="btn_sidebar_add_link" class="btn btn-default">
-              <span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
+            <span class="glyphicon glyphicon-plus" aria=hidden="true"></span>
           </button>
         </div>
-    </div>
+      </div>
+    </li>
+  </ul>
+  <div class="col-xs-12 hr"></div>
 </div>
 {% endblock %}
 
@@ -31,19 +72,13 @@
 <div class="col-xs-10 fill" id="maincontainer">
 {% endblock %}
 
-
 {%- block header -%}
 <div class="col-xs-12">
 <div class="btn-toolbar" role="toolbar" aria-label="...">
   <div class="btn-group btn-group-lg">
-    <button type="button" class="btn btn-dark btn dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-      <a><span class="glyphicon glyphicon-edit" aria=hidden="true"></span> Edit Style <span class="caret"></span></a>
+    <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
+      <a><span class="glyphicon glyphicon-edit" aria=hidden="true"></span> Edit Style</a>
     </button>
-    <ul class="dropdown-menu" role="menu">
-        <li><a href="#" class="list-group-item" id="btn_change_bkg" data-toggle="modal" data-target="#modal_bkg" style="margin:0px">Change Background</a></li>
-        <li><a href="#" class="list-group-item" id="btn_change_colors" data-toggle="modal" data-target="#modal_colors" style="margin:0px">Change Colors</a></li>
-        <li><a href="#" class="list-group-item" id="btn_change_fonts" data-toggle="modal" data-target='#modal_fonts' style="margin:0px">Change Fonts</a></li>
-    </ul>
   </div>
   <div class="btn-group btn-group-lg">
     <a id="btn_saveprofile" class="btn btn-dark" href="{{
